--- a/rbenv/main.yml
+++ b/rbenv/main.yml
@@ -7,7 +7,7 @@
 
   tasks:
     - name: rbenv | install build depends
-      apt: pkg=$item state=latest install_recommends=no
+      apt: pkg={{ item }} state=latest install_recommends=no
       with_items:
         - build-essential
         - git
@@ -20,10 +20,10 @@
         - zlib1g-dev
 
     - name: rbenv | update rbenv repo
-      git: repo=git://github.com/sstephenson/rbenv.git dest=$rbenv_root version=v0.4.0
+      git: repo=git://github.com/sstephenson/rbenv.git dest={{ rbenv_root }} version=v0.4.0
 
     - name: rbenv | add rbenv to path
-      file: path=/usr/local/bin/rbenv src=${rbenv_root}/bin/rbenv state=link
+      file: path=/usr/local/bin/rbenv src={{ rbenv_root }}/bin/rbenv state=link
 
     - name: rbenv | add rbenv initialization to profile
       template: src=templates/rbenv.sh.j2 dest=/etc/profile.d/rbenv.sh owner=root group=root mode=0755
@@ -39,32 +39,32 @@
       when_failed: $rbuild_present
 
     - name: rbenv | clone ruby-build repo
-      git: repo=git://github.com/sstephenson/ruby-build.git dest=${tempdir.stdout}/ruby-build
+      git: repo=git://github.com/sstephenson/ruby-build.git dest={{ tempdir.stdout }}/ruby-build
       when_failed: $rbuild_present
 
     - name: rbenv | install ruby-build
-      command: ./install.sh chdir=${tempdir.stdout}/ruby-build
+      command: ./install.sh chdir={{ tempdir.stdout }}/ruby-build
       when_failed: $rbuild_present
 
     - name: rbenv | remove temporary directory
-      file: path=${tempdir.stdout} state=absent
+      file: path={{ tempdir.stdout }} state=absent
       when_failed: $rbuild_present
 
-    - name: rbenv | check ruby $ruby_version installed
-      shell: RBENV_ROOT=${rbenv_root} rbenv versions | grep $ruby_version
+    - name: rbenv | check ruby {{ ruby_version }} installed
+      shell: RBENV_ROOT={{ rbenv_root }} rbenv versions | grep {{ ruby_version }}
       register: ruby_installed
       ignore_errors: yes
 
-    - name: rbenv | install ruby $ruby_version
-      shell: RBENV_ROOT=${rbenv_root} rbenv install $ruby_version
+    - name: rbenv | install ruby {{ ruby_version }}
+      shell: RBENV_ROOT={{ rbenv_root }} rbenv install {{ ruby_version }}
       when_failed: $ruby_installed
 
-    - name: rbenv | set global ruby $ruby_version
-      shell: RBENV_ROOT=${rbenv_root} rbenv global $ruby_version
+    - name: rbenv | set global ruby {{ ruby_version }}
+      shell: RBENV_ROOT={{ rbenv_root }} rbenv global {{ ruby_version }}
       when_failed: $ruby_installed
 
     - name: rbenv | rehash
-      shell: RBENV_ROOT=${rbenv_root} rbenv rehash
+      shell: RBENV_ROOT={{ rbenv_root }} rbenv rehash
       when_failed: $ruby_installed
 
     - name: rbenv | set gemrc
